13/08/2014:
	- The rotate filter only ever operates on 8bit data, so remove if else type statements from
	  function - increases average function speed by about around 15%.
	- Added missing URL.h to src/Makefile.am.


11/08/2014:
	- Renamed variable bpp in IIPImage and its derived classes to bpc (bits per channel),
	  which is more logical and how we have named things elsewhere.
	- Modification to TileManager, which was requesting more tiles than necessary for regions.
	- Changes to View.cc to make WID and HEI requests with region exports produce images with a
	  *final* size of that requested by WID or HEI. For example RGN=0.1,0.1,0.5,0.5&WID=500 will
	  now produce an image of 500px in width rather than extract the region from an image of size
	  500px wide. CVT also cleaned up.


06/08/2014:
	- Updated exception handling to use std::invalid_argument and a new derived file_error
	  exception within the IIPImage and derived classes. Allows better distinguishing between
	  HTTP status errors.
	- Moved URL decoding code from FIF.cc to separate URL class in URL.h.


05/08/2014:
	- Added flip function to Transforms.
	- Modified JTL, DeepZoom, Zoomify and CVT to avoid float conversion if not required.
	- Converted bilinear and nearest neighbour resize code to unsigned char to avoid
	  unnecessary conversion to float.


30/07/2014:
	- Moved CTW processing function to before gamma function in JTL.cc and CVT.cc.
	- Added missing function comments and minor layout changes in Transform.cc and FIF.cc.


24/07/2014:
	- Simplified the use of hash_map types and removed the customized hash function, which
	  was causing our image metadata cache to work incorrectly. Removed the const prefix from
	  all hash maps keys.


20/07/2014:
	- Min Max values are now read as vectors in multiple channel images - thanks to Chiara Marmo.


19/07/2014:
	- Added support for magic byte signature file format detection instead of relying on